fixed search result element spacing

--- a/src/components/search-field/search.css
+++ b/src/components/search-field/search.css
@@ -69,7 +69,6 @@ input[type="search"] {
 
 .search-list-item {
 	display: inline-block;
-	margin: 20px;
 }
 
 .title, .genre, .year {
